@@ -1,6 +1,6 @@
 
 
-#LePremierCommit #Jefarmlescommits #suuuuuuuu mdrrr Lancer depuis le fichiers CY-Puzzle Pour compiler : javac --module-path "H:\Documents\javafx-sdk-17\lib" --add-modules javafx.controls -d out CY_PUZZLE*.java pour lancer : java --module-path "H:\Documents\javafx-sdk-17\lib" --add-modules javafx.controls -cp out CY_PUZZLE.Main Telecharger javaFX 17 : https://gluonhq.com/products/javafx/ puis mettre le dossier java fx 17 dans le meme chemin que dans la commande pour lancer ou alors modife le chemin de la commande.
+#LePremierCommit #Jefarmlescommits #suuuuuuuu
 
 
 Commande pour compiler : javac --module-path "C:\Users\kalpi\Desktop\javafx-sdk-17.0.15\lib" --add-modules javafx.controls,javafx.fxml -d out src\CY_PUZZLE\*.java
